trigger by PR to master
Signed-off-by: Lihe Chen <lihe.chen@gmail.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: cicd
 on:
-  push:
+  pull_request:
     branches:
-      - release
+      - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
